# kaggle-ai-agents

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  Makefile  README.md  VIDEO_GUIDE.md  main.py  pyproject.toml  setup.sh
.skills/trading_assistant/: SKILLS.md
agents/trading_agent/: agent.py
agents/trading_agent/.adk/: session.db
src/: __init__.py  agents.py  cli.py  exceptions.py  mcp_server.py  security.py  test_system.py  workflow.py
src/agents/: __init__.py
src/agents/trading_agent/: __init__.py  agent.py
src/agents/trading_agent/.adk/: session.db
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_mcp_tools_live.py
tests/unit/: __init__.py  test_mcp_sanitization.py  test_security.py
