[project]
name = "kaggle-ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=0.1.0",
    "google-genai>=0.1.0",
    "fastmcp>=0.4.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "cachetools>=5.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that make live network calls to yfinance (deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
